Added images and updated the styling to match a business card

--- a/index.html
+++ b/index.html
@@ -10,7 +10,36 @@
 </head>
 
 <body>
-
+    <div class="container">
+        <div class="item-left">
+            <div class="profileImageDiv">
+                <img class="profileImage" src="flexBox_image.jpeg" alt="First Image" />
+            </div>
+            <div class="iconDiv">
+                <div class="phoneIconImg">
+                    <img class="phoneIcon" src="phone.png" />
+                </div>
+                <div class="messagesIconImg">
+                    <img class="messagesIcon" src="messages.png" />
+                </div>
+            </div>
+        </div>
+        <div class="item-right">
+            <div class="firstName">John Sosphone</div>
+            <img class="starImage" src="stars.png" alt="Second Image" />
+            <div class="secondTitle">Psychic Healer</div>
+            <div class="barAndDesc">
+                <div class="greenBar"></div>
+                <div class="description">
+                    Depression, Life Coaching, Mental & Emotional Health, Stress And Anger Management
+                </div>
+            </div>
+            <div class="smallText">
+                <div class="thirdTitle">5 mins free</div>
+                <div class="costTitle">then $5.99/min</div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
